[package]
name = "demo-crypto-api"
version = "0.1.0"
edition = "2021"

[dev-dependencies]
cucumber = "0.21.1"
dotenv = "0.15"
reqwest = { version = "0.12.5", features = ["json"] }
tokio = { version = "1.39.2", features = ["full"] }
serde = { version = "1.0.204", features = ["derive"] }
serde_json = { version = "1.0.121" }
rayon = "1.10.0"
regex = "1.10.5"
hmac = "0.13.0-pre.4"
sha2 = "0.11.0-pre.4"
base64 = "0.22.1"

[build-dependencies]
handlebars = "6.0.0"

[[test]]
name = "cucumber_runner" # this should be the same as the filename of your test target
path = "tests/cucumber_runner.rs"
harness = false  # allows Cucumber to print output instead of libtest